# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.63 2010/06/25 16:43:55 xarthisius Exp $

  25 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org>
  xen-tools-4.0.0.ebuild, -files/xen-tools-4.0.0-as-needed.patch,
  +files/xen-tools-4.0.0-asneeded.patch:
  Fixing build with --as-neeed wrt bug 320339. Thanks to Diego for
  reporting.

  24 Jun 2010; Christoph Mende <angelos@gentoo.org> xen-tools-3.4.2.ebuild:
  Stable on amd64 wrt bug #293714

  09 Jun 2010; Patrick Lauer <patrick@gentoo.org> xen-tools-4.0.0.ebuild:
  Adding iasl dep for hvm useflag. Fixes #318471

*xen-tools-4.0.0 (12 Apr 2010)

  12 Apr 2010; Alexey Shvetsov <alexxy@gentoo.org> +xen-tools-4.0.0.ebuild,
  +files/xen-tools-4.0.0-as-needed.patch:
  Version bump per bug #313791

  07 Apr 2010; Patrick Lauer <patrick@gentoo.org>
  files/xen-tools-3.4.0-network-bridge-broadcast.patch:
  Fixing xen-tools-3.4.0-network-bridge-broadcast.patch for #258378

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  xen-tools-3.4.2.ebuild:
  stable x86, bug 293714

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  xen-tools-3.4.2.ebuild, +files/xen-tools-3.4.2-as-needed.patch:
  fix issues with --as-needed, patch by Kacper Kowalik in bug 296631

*xen-tools-3.4.2 (01 Dec 2009)

  01 Dec 2009; Patrick Lauer <patrick@gentoo.org> +xen-tools-3.4.2.ebuild:
  Bump

  05 Nov 2009; Patrick Lauer <patrick@gentoo.org> xen-tools-3.4.1-r1.ebuild:
  Adding gettext depend for #287935

  27 Oct 2009; Patrick Lauer <patrick@gentoo.org> -xen-tools-3.3.0.ebuild,
  -xen-tools-3.3.1.ebuild:
  Removing old versions for #287936

  11 Oct 2009; Petteri Räty <betelgeuse@gentoo.org>
  xen-tools-3.4.1-r1.ebuild:
  Replace built_with_use with has_version.

*xen-tools-3.4.1-r1 (01 Sep 2009)

  01 Sep 2009; Wolfram Schlich <wschlich@gentoo.org> +files/xend.initd-r1,